src/styles/charts/chart.scss
@import '../colors/colors.scss';
@import '../checkbox/checkbox.scss';

$toolTipBoxShadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);

.pyx_chart_container {
  width: 100%;
  background-color: map-get($color_day, 'background');
  position: relative;
  display: flex;
  align-items: center;
  flex-direction: column;

  .controls {
    margin-top: 8px;
    display: flex;
    min-height: 40px;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
  }

  .night_mode_control {
    a {
      font-size: 20px;
      user-select: none;
      color: map-get($color_day, 'link');
      &:hover {
        cursor: pointer;
      }
    }
  }

  .tooltip {
    display: none;
    position: absolute;
    z-index: 1;
    background-color: map-get($color_day, 'background');
    box-shadow: $toolTipBoxShadow;
    padding: 8px;
    align-items: center;
    justify-items: center;
    flex-direction: column;
    .items {
      display: flex;
      align-items: center;
      > div {
        display: flex;
        margin-left: 8px;
        margin-right: 8px;
        flex-direction: column;
        span.value {
          font-size: 16px;
          font-weight: bold;
        }
        span.item {
          font-size: 14px;
        }
      }
    }
  }

  svg {
    display: block;
    z-index: 1;
    position: relative;

    circle {
      fill: white;
      stroke-width: 2;
    }

    rect {
      &.center {
        stroke: map-get($color_day, 'controlCenterStoke');
        &:hover {
          cursor: grab;
        }
        &:active,
        &:focus {
          cursor: grabbing;
        }
      }
      &.control {
        fill: map-get($color_day, 'controlLeftRightFill');
      }
      &.control_resize {
        fill: map-get($color_day, 'controlResizeLeftRightFill');
        &:hover,
        &:active,
        &:focus {
          cursor: col-resize;
        }
      }
    }
  }

  line {
    &.verticle {
      display: none;
      &.show {
        display: block;
      }
      stroke-width: 2;
    }
    stroke: map-get($color_day, 'lineStroke');
  }

  svg {
    user-select: none;
    touch-action: pan-x;

    &.main_chart {
      path {
        &:hover {
          stroke-width: 3;
        }
      }
    }

    &.chart_preview {
      margin-top: 5px;
    }
  }

  path {
    stroke-width: 2;
    transition: d 0.35s;
  }

  text {
    font-size: 12px;
    z-index: 1;
    background-color: white;
    font-family: sans-serif;
    text-shadow: 1px 0.5px white;
    &.text_step {
      fill: map-get($color_day, 'textAxis');
    }

    &.charts_abs {
      fill: map-get($color_day, 'textAxis');
    }
  }

  &.night {
    .checkbox_container {
      background-color: map-get($color_night, 'background');
      border-color: map-get($color_night, 'border');
      .label {
        color: white;
      }

      label {
        &.not_active {
          background-color: unset !important;
          border-color: map-get($color_night, 'border') !important;
        }
      }
    }

    .tooltip {
      background-color: map-get($color_night, 'toolTipBackGround');
      p {
        color: map-get($color_night, 'textColor');
      }
    }
    background-color: map-get($color_night, 'background');
    line {
      stroke: map-get($color_night, 'lineStroke');
    }

    rect {
      &.control {
        fill: map-get($color_night, 'controlLeftRightFill');
      }
    }

    text {
      text-shadow: 1px 0.5px #242f3e;
      &.text_step {
        fill: map-get($color_night, 'textAxis');
      }
      &.charts_abs {
        fill: map-get($color_night, 'textAxis');
      }
    }
  }
}

